# conan-gtest-coverage-example

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py
app/: CMakeLists.txt  README.md  conanfile.py  main.cpp
helloworld/: CMakeLists.txt  README.md  conanfile.py
helloworld/include/helloworld/: helloboi.h
helloworld/src/: helloboi.cpp
helloworld/test/: CMakeLists.txt  helloboi_test.cpp
include/helloworld/: helloboi.h
test/: CMakeLists.txt  helloboi_test.cpp
